# LzyTimer

./: CMakeLists.txt  LzyTimer.hpp  README.md
benchmark/: CMakeLists.txt  LzyTimer.cpp  Sleep.cpp
platform/: LzyPerciseSleep.h
platform/win/: LzyPerciseSleep.hpp
